--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="favicon.ico" rel="icon">
 </head>
 
-<body class="d-flex ">
+<body>
 
   <!-- All body content will come here -->
 
@@ -21,8 +21,8 @@
       <form>
         <div class="row px-3">
           <div class="col-12 col-md-11 px-4">
-            <span class="card-title d-block">Enter Temperature</span>
-            <label for="degreeInput" class="py-sm-2">Degree</label>
+            <span class="card-title d-block word">Enter Temperature</span>
+            <label for="degreeInput" class="py-sm-2 word">Degree</label>
             <div class="input-group">
               <input type="number" class="form-control" id="inputDegree" name="inputDegree" placeholder="Enter Degree"
                 value="0" />
@@ -34,7 +34,7 @@
                 </select>
               </div>
             </div>
-            <label for="selectConversionType" class="py-sm-2">Convert In</label>
+            <label for="selectConversionType" class="py-sm-2 word">Convert In</label>
             <div class="input-group d-inline-block">
               <div class="input-group-append">
                 <select class="form-control" id="selectConversionType">
@@ -50,13 +50,10 @@
                                       offset-md-3
                                       mt-4
                                       rounded-pill
-                                      d-flex
                                       justify-content-center
                                       align-items-center
-                                      text-white"> Convert&emsp;
-                                       <svg class="mt-1" xmlns="http://www.w3.org/2000/svg"
-                width="15px" height="15px" viewBox="0 0 21.367 20.826">
-              </svg>
+                                      text-white text"> Convert&emsp;
+                                      
             </button>
           </div>
         </div>
